fix button wrapping

--- a/assets/css/pages/celtic.css
+++ b/assets/css/pages/celtic.css
@@ -110,4 +110,5 @@
   display: inline-block;
   white-space: nowrap;
   text-align: center;
+  min-width: 100px;
 }
