--- a/assets/css/pages/fire.css
+++ b/assets/css/pages/fire.css
@@ -115,6 +115,7 @@
   display: inline-block;
   white-space: nowrap;
   text-align: center;
+  min-width: 100px;
 }
 
 .contact-info p {
